# tensor-saes

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  train.py
.devcontainer/: devcontainer.json
config/: config.yaml
notebooks/: analysis.ipynb  baseline.ipynb  causal_attribution.ipynb  causal_attribution.py  causal_attribution_dev.ipynb  dark_subspace.ipynb  hook_gpt2.ipynb  regression.ipynb  train_sae.ipynb
plots/: example_sequence_1648.txt  example_sequence_2724.txt  example_sequence_5512.txt
plots/layer_filtering_results_exclude_0/: metadata.json
plots_feature_bias/: example_sequence_6930.txt
plots_no_bias/: example_sequence_2424.txt  example_sequence_2592.txt
plots_no_bias/layer_filtering_results_exclude_0/: metadata.json
plots_no_bias_fix_jan10/layer_filtering_results_exclude_0/: metadata.json
sae/: __init__.py  __main__.py  config.py  data.py  kernels.py  logger.py  sae.py  train.py  trainer.py  utils.py
scripts/: baseline.sh  baseline_cross.sh  baseline_cross_rp1t.sh  baseline_cross_test.sh  old_cross_mike.sh  old_neverworked.sh
scripts/gpt2/: baseline_cross.sh  baseline_cross_rp1t.sh  baseline_cross_test.sh  baseline_single.sh  old_cross_mike.sh  old_neverworked.sh
scripts/pythia/: pythia14m_cross_rp1t.sh  pythia31m_cross_rp1t.sh  pythia70m_cross_rp1t.sh  sweep.sh
