[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sae"
description = "Sparse autoencoders"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["interpretability", "explainable-ai"]
license = {text = "MIT License"}
version = "0.1.0"

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
sae = "sae.__main__:run"


[tool.setuptools.packages.find]
include = ["sae*"]

